#
# Makefile.am for Underworld Adventures
#
# $Id$
#

AUTOMAKE_OPTIONS = gnu

top_srcdir = ../linux
top_builddir = ../linux

SDL_CFLAGS = `sdl-config --cflags`
INCLUDES = -I$(srcdir)/.. $(SDL_CFLAGS)

noinst_LTLIBRARIES = libconv.la

libconv_la_SOURCES = codevm.cpp codevm.hpp

EXTRA_DIST = 

SUBDIRS = 

