dnl
dnl configure.in for Underworld Adventures
dnl
dnl $Id$
dnl


dnl initial stuff
AC_INIT(../uwadv.cpp)

AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AM_INIT_AUTOMAKE(uwadv,0.0.1)
AM_CONFIG_HEADER(config.h)
AC_PREFIX_DEFAULT(/usr/local)


dnl find and test the compiler
AC_PROG_CC
AC_LANG_C
AC_C_INLINE
AC_C_CONST

AC_PROG_CXX
AC_LANG_CPLUSPLUS
AC_REQUIRE_CPP


dnl other needed programs
AC_PROG_MAKE_SET
AC_PROG_INSTALL


dnl X config
AC_PATH_X
AC_PATH_XTRA


dnl check header
AC_HEADER_STDC


dnl checking for SDL

AC_CHECK_HEADER(SDL/SDL.h,,AC_MSG_ERROR([
Underworld Adventures needs SDL 1.2.3 or higher installed.]))

AC_CHECK_HEADER(SDL/SDL_opengl.h,,AC_MSG_ERROR([
File SDL_opengl.h is missing. Please install at least SDL 1.2.3 (or newer).]))


dnl MacOsX needs another include path

case "$target" in
  *-*-darwin*)
    CFLAGS=$CFLAGS -I/sw/include/
esac


dnl checking for working OpenGL

AC_CHECK_HEADER(GL/gl.h,,AC_MSG_ERROR([
OpenGL header not found. An OpenGL graphics library is required
to compile and run Underworld Adventures.
Check http://mesa3d.sourceforge.net]))

dnl AC_MSG_CHECKING(for working OpenGL)
dnl AC_TRY_COMPILE([
dnl   #include <GL/gl.h>
dnl   #include <GL/glu.h>
dnl ],[
dnl ],AC_MSG_RESULT(yes),AC_MSG_ERROR([
dnl OpenGL support does not work, please reinstall your OpenGL driver.
dnl ])


dnl checking for FMOD

AC_CHECK_HEADER(fmod.h,AC_DEFINE(HAVE_FMOD_H,1,HAVE_FMOD_H),AC_MSG_WARN([
FMOD not found. No midi playback available.
FMOD is available at http://www.fmod.org]))


dnl produce output files
AC_OUTPUT(../Makefile ../tools/Makefile)

