#
# Underworld Adventures - an Ultima Underworld remake project
# Copyright (c) 2006 Michael Fink
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
# Makefile.am for win32 folder
#
# $Id$
#

EXTRA_DIST = \
	game_win32.cpp \
	game_win32.hpp \
	resource.h \
	Uus.ico \
	uwadv.exe.manifest \
	uwadv_res.rc \
	uaconfig/Corp.ico \
	uaconfig/resource.h \
	uaconfig/uaconfig.cpp \
	uaconfig/uaconfig.hpp \
	uaconfig/uaconfig_res.rc \
	uadebug/AboutDlg.hpp \
	uadebug/BreakpointList.cpp \
	uadebug/BreakpointList.hpp \
	uadebug/DebugClient.cpp \
	uadebug/DebugClient.hpp \
	uadebug/EditListViewCtrl.cpp \
	uadebug/EditListViewCtrl.hpp \
	uadebug/Filename.cpp \
	uadebug/Filename.hpp \
	uadebug/GameStringsView.cpp \
	uadebug/GameStringsView.hpp \
	uadebug/HotspotList.cpp \
	uadebug/HotspotList.hpp \
	uadebug/LuaSourceView.cpp \
	uadebug/LuaSourceView.hpp \
	uadebug/MainFrame.cpp \
	uadebug/MainFrame.hpp \
	uadebug/ObjectList.cpp \
	uadebug/ObjectList.hpp \
	uadebug/PlayerInfo.cpp \
	uadebug/PlayerInfo.hpp \
	uadebug/ProjectInfo.cpp \
	uadebug/ProjectInfo.hpp \
	uadebug/ProjectManager.cpp \
	uadebug/ProjectManager.hpp \
	uadebug/PropertyListCtrl.cpp \
	uadebug/PropertyListCtrl.hpp \
	uadebug/resource.h \
	uadebug/stdatl.cpp \
	uadebug/stdatl.hpp \
	uadebug/TileInfo.cpp \
	uadebug/TileInfo.hpp \
	uadebug/TileMapView.hpp \
	uadebug/TileMapViewCtrl.cpp \
	uadebug/TileMapViewCtrl.hpp \
	uadebug/uadebug.cpp \
	uadebug/uadebug.def \
	uadebug/uadebug_res.rc \
	uadebug/WatchesList.cpp \
	uadebug/WatchesList.hpp \
	uadebug/WindowBase.hpp \
	uadebug/res/Des.ico \
	uadebug/res/Lua.ico \
	uadebug/res/Sanct.ico \
	uadebug/thirdparty/README.thirdparty.txt \
	uadebug/resource.h \
	uadebug/uadebug.def \
	uadebug/uadebug_res.rc \
	uastudio/resource.h \
	uastudio/Sanct.ico \
	uastudio/uastudio.exe.manifest \
	uastudio/uastudio_res.rc
